<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingTop="63dp">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:clipToPadding="false"
        android:isScrollContainer="false"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/todayContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/today_s_tasks"
                    android:textColor="#111111"
                    android:textSize="27sp"
                    android:textStyle="bold" />

                <com.frsarker.todotask.NoScrollListView
                    android:id="@+id/taskListToday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="#30CCCCCC"
                    android:dividerHeight="1dp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/tomorrowContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tomorrow_s_tasks"
                    android:textColor="#111111"
                    android:textSize="27sp"
                    android:textStyle="bold" />

                <com.frsarker.todotask.NoScrollListView
                    android:id="@+id/taskListTomorrow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="#30CCCCCC"
                    android:dividerHeight="1dp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/otherContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/upcoming_tasks"
                    android:textColor="#111111"
                    android:textSize="27sp"
                    android:textStyle="bold" />

                <com.frsarker.todotask.NoScrollListView
                    android:id="@+id/taskListUpcoming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="#30CCCCCC"
                    android:dividerHeight="1dp" />

            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <LinearLayout
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="516dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="173dp"
            app:srcCompat="@drawable/toobapng" />


        <TextView
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:paddingLeft="100dp"
            android:text="TOOBA"
            android:textColor="#4CAF50"
            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="60dp"
            android:text="Planning and Calculation"
            android:textColor="#020202"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/radius_border_button"
            android:onClick="openAddModifyTask"
            android:paddingHorizontal="70dp"
            android:paddingVertical="15dp"
            android:text="@string/add_new_task"
            android:textColor="@android:color/holo_green_dark" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_task"
        android:onClick="openAddModifyTask"
        android:src="@drawable/ic_fab_add"
        app:backgroundTint="#4CAF50" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>